# wnn

./: .gitignore  Cargo.toml  Makefile  README.md  check_values.py  preview_result.py  simple_model.py  test_and_preview.sh
shaders/: activation.wgsl  batchnormalization.wgsl  broadcast.wgsl  conv.wgsl  globalaveragepool.wgsl  instancenormalization.wgsl  matmul.wgsl  maxpool.wgsl  mul.wgsl  relu.wgsl  resize.wgsl  softmax.wgsl  transpose.wgsl
src/: compiler.rs  gpu.rs  kernel.wgsl  lib.rs  main.rs  npy.rs  shape.rs  shape_inference.rs  tensor.rs  type_inference.rs  utils.rs
src/analyzer/: mod.rs  shape_inference.rs
wnn/: Cargo.toml
wnn-cli/: Cargo.toml
wnn-cli/src/: main.rs  npy.rs
wnn-cli/tests/: resnet.rs
wnn-wasm/: Cargo.toml  index.html
wnn-wasm/src/: lib.rs
wnn/shaders/: activation.wgsl  batchnormalization.wgsl  broadcast.wgsl  concat.wgsl  conv.wgsl  matmul.wgsl  maxpool.wgsl  resize.wgsl  slice.wgsl  softmax.wgsl  transpose.wgsl
wnn/src/: compiler.rs  gpu.rs  lib.rs  npy.rs  onnx.rs  shape.rs  simplifier.rs  tensor.rs  utils.rs
wnn/src/analyzer/: mod.rs  shape_inference.rs  type_inference.rs
