[package]
name = "wnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.2.0"
bytes = "1"
anyhow = "1.0.65"
wgpu = "0.14.0"
pollster = "0.2"
human_bytes = { version = "0.3", features = ["bibytes"] }
env_logger = "0.9"
log = "0.4"
bytemuck = "1.12.1"
