[package]
name = "wnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.2.0"
bytes = "1"
anyhow = "1.0.65"
wgpu = "0.14.0"
human_bytes = { version = "0.3", features = ["bibytes"] }
log = "0.4"
bytemuck = "1.12.1"
tera = { version = "1.17.1", default-features = false }
lazy_static = "1.4.0"
nom = "7.1.1"
image = "0.24.4"
futures-intrusive = "0.5.0"
